# pypopsift

./: CMakeLists.txt  MANIFEST.in  README.md  example.py  setup.py  test.sh
src/: main.cpp  popsift.cpp  popsift.h
tests/: test.py
